--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
-                  android:label="@string/app_name">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".MainActivity"-->
-            <!--android:label="@string/main_label">-->
-            <!--<intent-filter>-->
-                <!--&lt;!&ndash;<action android:name="android.intent.action.MAIN"/>&ndash;&gt;-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-        <activity
-            android:name=".GameActivity"
-            android:label="@string/ttt"/>
-        <activity
-            android:name=".UserListActivity"
-            android:label="@string/user_list_label"/>
 
         <activity
             android:name=".ShiftListActivity"
@@ -64,6 +51,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.carleton.COMP2601.LoginActivity"/>
+        </activity>
+        <activity android:name=".ShiftAdminActivity"
+            android:label="@string/title_shift_detail"
+            android:parentActivityName=".ShiftListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.carleton.COMP2601.AdminActivity"/>
         </activity>
     </application>
 
